F23: partial state, trust ageing, temporary issues with valid_until, place_type
